MongoDB 3.0 NT Service shutdown race condition with db.serverShutdown()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.0.2, 3.1.1
    • Affects Version/s: 3.0.0
    • Component/s: Admin
    • None
    • Minor Change
    • ALL
    • Platform 1 04/03/15
    • None
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There is a crash in mongod while it is being terminated during some of the Automation Agent tests on Windows. The crash only happens with MongoDB 3.0. Running the same tests with MongoDB 2.6 or 2.4 does not produce the crash. Crash dump file is attached.

              Assignee:
              Mark Benvenuto
              Reporter:
              David Golub (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: