SERVER-17570: Fix NT Service shutdown race condition

(cherry picked from commit 0f6f2e9a199bff05c69ca5aace94a5ac8fe2cff3)