src/mongo/unittest/crutch.cpp
@@ -64,4 +64,14 @@ namespace mongo {
         invariant(!"unittests shouldn't call exitCleanly");
     }
 
+#ifdef _WIN32
+    void signalShutdown() {}
+
+namespace ntservice {
+    bool shouldStartService() {
+        return false;
+    }
+}
+#endif
+
 }  // namespace mongo
